<resources>
    <string name="app_name">faylasoof_task</string>
    <string name="google_client">719209212640-rrmckr5ng74duof9aqsfm5ttge2vb589.apps.googleusercontent.com</string>
    <string name="signUpGoogle">SignUp With Google</string>
    <string name="passowrd">password</string>
    <string name="login">login</string>
    <string name="email_hint">email</string>
    <string name="firstname">first name</string>
    <string name="secondname">second name</string>
    <string name="dob">date of birth</string>
    <string name="normal_auth">Create Account</string>
    <string name="login_facebook">Login With Facebook</string>

    <string name="facebook_app_id">124295669615075</string>
    <string name="fb_login_protocol_scheme">fb124295669615075</string>


</resources>